[package]
name = "lox_rs_ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
log = "0.4.20"
phf = { version = "0.11.2", features = ["macros"] }
rustyline = "12.0.0"
simplelog = { version = "0.12.1", features = ["termcolor"] }
thiserror = "1.0.49"

